public/css/main.css
@font-face {
  font-family: 'Roboto';
  src: url('../fonts/Roboto/Roboto-Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
}
@font-face {
  font-family: 'Roboto-Black';
  src: url('../fonts/Roboto/Roboto-Black.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
}
@font-face {
	font-family: 'icomoon';
	src:url('../fonts/icomoon.eot?-ryeo5j');
	src:url('../fonts/icomoon.eot?#iefix-ryeo5j') format('embedded-opentype'),
		url('../fonts/icomoon.ttf?-ryeo5j') format('truetype'),
		url('../fonts/icomoon.woff?-ryeo5j') format('woff'),
		url('../fonts/icomoon.svg?-ryeo5j#icomoon') format('svg');
	font-weight: normal;
	font-style: normal;
}

[class*="icon-"] {
	font-family: 'icomoon';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;

	/* Better Font Rendering =========== */
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.icon-google-plus:before {
	content: "\e600";
}
.icon-facebook:before {
	content: "\e601";
}
.icon-twitter:before {
	content: "\e602";
}
.icon-linkedin:before {
	content: "\e603";
}

#socialicons{
	margin-top: 10px;
}

a.socialicon {
	margin: 0 5px;
	padding-top: 8px;
	padding-bottom: 8px;
	padding-left: 10px;
	padding-right: 10px;
	width: 40px;
	height: 40px;
	border-radius: 50%;
	background-color: #fff; 
	font-size: 22px; 
	color: #c6c6c6;
	text-decoration: none;
}
.socialicon a:hover, a.socialicon:hover {
	background-color: #fff265;
	color: #666;
}

body {
	font-family: 'Roboto', 'Helvetica', 'Arial';
}
p {
	font-size:14px;
}
nav {
	background-color: #fff;
	color: #000;
	box-shadow: 0 8px 50px -6px rgba(255,245,108,0.5);
}

.row{
	margin-right: 0;
	margin-left: 0;
}

#scripler, #features, #about {
	padding: 50px 20px 100px;
	background-image: -webkit-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* WebKit */
	background-image: -moz-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* Firefox */
	background-image: -ms-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* IE10+ */
	background-image: -o-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* Opera */
	background-image: radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%);
	min-height:100vh;
}

#scripler {
	background-color: #ececec;
	color: #666;
	padding-top: 100px;
}
#scripler .scripler-logo {
	margin: 0 auto 50px;
}
#scripler .test-alpha {
	background-color: #fff56c;
	color: #000;
	font-size: 1.5em;
	font-weight: 700;
	border: none;
	margin: 20px;
	padding: 10px 25px;
}

#features {
	background-color: #215660;
}
#features h2, #features h3 {
	color: #fff56c;
}
#features h3 {
	font-size: 1.2em;
	font-weight: 700;
}
#features p {
	color: #fff;
}
#features .container{
	width:960px;
	padding:0;
}
#features .row .col-xs-12, #features .row .col-md-6{
	padding-left:0;
	padding-right:0;
	max-width: 100%;
}

#about {
	background-color: #fff56c;
	color: #666;
}
#about h2, #about h4.text-color-black {
	color: #000;
}
#about h3 span {
	font-size: 14px;
}
#about a {
	color: #000;
}

#contact{ 
	background-color: #fff;
	color: #666;
}
#contact a {
	color: #000;
}
#contact .left-column {
	position: absolute;
	left: 0;
	background-color: #fff;
	height: 100%;
	min-height: 100vh;
	padding: 50px 20px 100px;
	z-index: 5;
}
#contact .left-column .row p {
	margin: 0;
}
#contact iframe {
	width: 100%;
	height: 100%;
	min-height: 100vh;
	overflow: hidden;
}

#forgot-password{
	float:left;
	color: #000;
	text-decoration: underline;
	font-size: 1.1em;
}

#remember-me-box{
	clear: both;
}
#remember-me-box>label{
	margin-left: 4px;
	float: left;
	font-size:1.2em;
	font-weight: 400;
}
#remember{
	float: left
}
 
.sr-only{
	color:#000; 
}
.colIco{
	float: none;
	display:block;
	padding: 0;
	margin:0;
	margin-top:-15px;
}
.colIco:first-child{
	margin-top:-10px;	
}
.colIco:last-child{
	margin-bottom: -5px;	
}
.icon-bar{
	color:#000!important;
	z-index: 5!important;
}

ul.navList li>a{
	font-size: 1.2em;
	color:#000;
	padding: 14px 15px 0;
}
ul.navList li>a:hover{
	background-color: #fff;
	color:#666;
} 

.nav>li>a:hover, .nav>li>a:focus {
    background-color: transparent;
}

a#signUp{
	color:#000;
	text-decoration: underline;
}

input#mce-EMAIL,input#mc-embedded-subscribe{
	height: 32px;
}
input#mc-embedded-subscribe{
	background-color:#fff56c;
	color:#000;
	font-size: 1em; 
	border:none; 

}

#login {
	background-color: #c6c6c6;
	display:none;
	padding-top:70px;
}

.email, .password {
	-moz-border-radius: 1px;
	-webkit-border-radius: 1px;
	border-radius: 1px;
	-webkit-appearance: none;
	border: none;
	background: #f6f6f6;
	font-size: 15px; 
	height: 32px;
	padding: 0 0 0 15px;
	margin: 0 5px 0 0;
	color: #818285;
	font-family: 'Roboto', sans-serif; 
	margin-bottom: 20px;
}
.login-button {
	-moz-border-radius: 1px;
	-webkit-border-radius: 1px;
	-webkit-appearance: none;
	border: 0;
	border-radius: 1px; 
	background-color:#fff56c;
	color: #231f20;
	font-size: 1.2em;
	font-weight: bold;  
	cursor: pointer; 
	text-align: center; 
	height: 32px;
	vertical-align: center; 
	margin-bottom: 20px;
}
#login-extras{
	font-size: 0.7em;
}
.login-main{
	float: none;
}
#remember{
	margin:0;
	padding:0; 
	display: inline; 
}
#fgpass{
	margin-bottom: 5px;
}
#remember-me-box{
	margin-bottom: 5px;
}
.pull-right-on-big-screen{
	float:right;
	height: 100%;
}

.navbar-collapse {
	text-align: center;
}
.navbar-nav {
  float: none;
  margin: 0 auto;
  padding: 0;
  display: inline-block;
}

@media (min-width:1050px){	
	#login-form {
		margin-left: 150px;
	}

	#features p {
		max-width:425px;
	}
}

@media (min-width:850px){
	html{
		overflow-x: hidden;
	}

	#features .row .col-xs-12, #features .row .col-md-6{
		max-width: 90%;
	}

	.menu-blog{
		background-color:#000;
	} 

	#login-form {
		margin-top: 10px;
	}
	li>a.blog-link{
		font-size: 1.2em;
		color: #fff56c !important;
		position:fixed;
		right:0;
		text-decoration: none;
		background-color: #000;
		width:79px;
		height: 50px;
	}     
	li>a.blog-link:hover{
		background-color: #000 !important;
		color:#FFF !important;
	}
	.menu-talk{
		background-color:#000;
	} 
	.navpoint{
		text-align: center;
	}
	a.navpoint.talk-link:hover{
		background-color: #ccc !important;
		color:#fff56c !important;
	}
	li>a.talk-link{
		font-size: 1.2em;
		color: #FFF !important;
		position:fixed;
		right:78px;
		text-decoration: none;
		background-color: #ccc;
		width:79px;
		height: 50px;
	}     
	li>a.talk-link:hover{
		background-color: #fff !important;
	}

}

@media (max-width:850px){
	html{
		overflow-x: hidden;
	}

	#features .row .col-xs-12, #features .row .col-md-6{
		max-width: 75%;
	}

	.navbar-toggle {
		position: fixed;
		top:-2px;
		right:-5px;
		z-index: 50;
		display: inline!important;
	}
	#navbar{
		position: fixed;
		top:42px; 
		right: 30px;
		background-color: #FFF;
	}
	.navbar-header img, .navbar{
		margin-top: -20px;
	}
	a.navbar-brand{
		display: none;
	}
	a#forgot-password{
		font-size: 1.5em;
	}
	#remember-me-box>label{
		font-size: 1.5em;
	}
	nav.navbar {
		position: fixed;
		height: 0!important;
		display: block;
		box-shadow: none;
		background-color: transparent!important;
	}

	form.login-form{
		margin:0;
	}

}

@media (max-width:540px) {
	#scripler, #features, #about {
		padding: 20px 20px 40px;
	}

	#contact .left-column {
		padding: 20px 20px 40px;
	}
}

